--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,15 +3,15 @@
 # Add steps that analyze code, save the dist with the build record, publish to a PyPI-compatible index, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/python
 
-# trigger:
-# - master
+trigger:
+- master
 
-# pool:
-#   vmImage: 'ubuntu-latest'
-# strategy:
-#   matrix:
-#     Python37:
-#       python.version: '3.7'
+pool:
+  vmImage: 'ubuntu-latest'
+strategy:
+  matrix:
+    Python37:
+      python.version: '3.7'
 
 # steps:
 # - task: UsePythonVersion@0
