--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,15 +13,15 @@ strategy:
     Python37:
       python.version: '3.7'
 
-# steps:
-# - task: UsePythonVersion@0
-#   inputs:
-#     versionSpec: '$(python.version)'
-#   displayName: 'Use Python $(python.version)'
+steps:
+- task: UsePythonVersion@0
+  inputs:
+    versionSpec: '$(python.version)'
+  displayName: 'Use Python $(python.version)'
 
-# - script: |
-#     python -m pip install --upgrade pip
-#   displayName: 'Install dependencies'
+- script: |
+    python -m pip install --upgrade pip
+  displayName: 'Install dependencies'
 
 # - script: |
 #     pip install pytest pytest-azurepipelines
