--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,7 @@ steps:
     python -m pip install --upgrade pip
   displayName: 'Install dependencies'
 
-# - script: |
-#     pip install pytest pytest-azurepipelines
-#     pytest
+- script: |
+    pip install pytest pytest-azurepipelines
+    pytest
 #   displayName: 'pytest'
